--- a/TeamProject/app/src/main/res/layout/fragment_calendar.xml
+++ b/TeamProject/app/src/main/res/layout/fragment_calendar.xml
@@ -8,7 +8,7 @@
     tools:context=".view.CalendarFragment">
 
     <CalendarView
-        android:id="@+id/calenderView"
+        android:id="@+id/calendarView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
@@ -17,6 +17,7 @@
 
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/floatingBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
