--- a/TeamProject/app/src/main/res/layout/activity_main.xml
+++ b/TeamProject/app/src/main/res/layout/activity_main.xml
@@ -4,40 +4,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
+    tools:context=".Board.MainActivity"
     android:orientation="vertical">
 
-    <LinearLayout
+    <Button
+        android:id="@+id/go_write_btn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <EditText
-            android:id="@+id/edittext21"
-            android:layout_width="264dp"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:hint="제목"
-            android:inputType="textPersonName" />
-
-        <Button
-            android:id="@+id/button21"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="등록" />
-
-    </LinearLayout>
-
-    <EditText
-        android:id="@+id/edittext22"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:hint="내용"
-        android:inputType="textPersonName" />
+        android:text="글쓰기" />
 
     <ListView
         android:id = "@+id/listView"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
+
 </LinearLayout>
