--- a/TeamProject/app/src/main/res/layout/list_lay.xml
+++ b/TeamProject/app/src/main/res/layout/list_lay.xml
@@ -34,6 +34,8 @@
             android:id="@+id/textView3"
             android:layout_width="396dp"
             android:layout_height="37dp"
+            android:maxLength="10"
+            android:maxLines="1"
             android:text="내용" />
     </LinearLayout>
 
